# OACurator

./: .gitattributes  .gitignore  ATTRIBUTIONS.md  LEGAL.md  LICENSE  README.md  index.html  mkdocs.yml  package-lock.json  package.json  requirements-docs.txt  tsconfig.json  tsconfig.node.json  vite.config.ts
scripts/: check-libvips-runtime-lock.mjs  check-release-bundle.mjs  install-libvips-macos.sh  install-libvips-windows.ps1  libvips-runtime-lock.json  make-universal-libvips-macos.sh  run-mkdocs.mjs  validate-release-workflows.mjs  verify-macos-runtime-arch.sh  verify-macos-universal-runtime.sh
src/: App.css  App.tsx  WorkbenchApp.tsx  main.tsx  startupTrace.ts  (+1 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  help.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial_schema.sql
src-tauri/src/: caf_import.rs  csv_safety.rs  diagnostics.rs  export.rs  export_policy.rs  file_operations.rs  file_ops.rs  image_metadata.rs  jobs.rs  lib.rs  main.rs  manifest.rs  oaa_archive.rs  oaa_validation.rs  path_safety.rs  raremarq_export.rs  scanner.rs  snikt_import.rs
src-tauri/src/catalog/: consistency.rs  delete.rs  manifests.rs  mod.rs  models.rs
src-tauri/src/commands/: artwork.rs  cache.rs  exports.rs  images.rs  imports.rs  jobs.rs  maintenance.rs  mod.rs  preferences.rs  workspace.rs
src-tauri/src/image_render/: cache.rs  error.rs  mod.rs  probe.rs  recipe.rs  scheduler.rs  service.rs
src-tauri/src/image_render/backend/: image_rs.rs  mod.rs  old_jpeg_tiff.rs  vips.rs  vips_linked.rs
(+55 files in other folders)
